--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
                         <th scope="row">Mean temperature (°C)</th>
                         <th scope="row">Number of moons</th>
                         <th scope="row">Notes</th>
-                        <th scope="row">Image</th>
-                        
-                           
+                        <th scope="row">Image</th> 
                     </tr>
             </thead>
                 <tbody>
@@ -116,7 +114,7 @@
                         <td>-65</td>
                         <td>2</td>
                         <td>The red planet</td>
-                        <td><img src="images/mars.jpg" alt="photograph of the planet mars"</td>
+                        <td><img src="images/mars.jpg" alt="photograph of the planet mars"></td>
                     </tr>
                     <tr> 
                         <th rowspan="4" scope="rowgroup">Jovian planets</th>
